--- a/src/Tools/_aspect-ratio.scss
+++ b/src/Tools/_aspect-ratio.scss
@@ -3,9 +3,9 @@
 //  Aspect ratio settings
 
 // Generates aspect ratio classes
-// Use: .ratio-16:9
+// Use: .ratio-16/9
 @mixin aspect-ratio($width, $height) {
-    .ratio-#{$width}\:#{$height} {
+    .ratio-#{$width}\/#{$height} {
         @include aspect-ratio-top-padding($width, $height);
     }
 }
