--- a/src/Settings/_settings.scss
+++ b/src/Settings/_settings.scss
@@ -142,11 +142,11 @@ $border-style: solid !default;
 // ---
 
 $z-indexes: (
-    z1         : 1,
-    z2         : 2,
-    z3         : 3,
-    z4         : 4,
-    z5         : 5
+    z1         : 100,
+    z2         : 200,
+    z3         : 300,
+    z4         : 400,
+    z5         : 500
 ) !default;
 
 // ---
@@ -172,6 +172,7 @@ $font-breakpoints: (
 // Grid
 // ---
 
+$columns-gutter: 1 !default;
 $grid-columns: 12 !default;
 
 // ---
