--- a/src/Tools/_grid.scss
+++ b/src/Tools/_grid.scss
@@ -1,3 +1,7 @@
+//  Grid Layout
+//  --
+//  Generates grid classes (flexbox)
+
 @mixin flex-grid-generate($denominator, $extension: '') {
     @for $numerator from 1 through $denominator {
         .flex-grid-#{$numerator}\/#{$denominator}#{$extension} {
